# Zombie-Shooter

./: CMakeLists.txt  README.md
include/: entity.hpp  text.hpp  window.hpp
src/: entity.cpp  main.cpp  text.cpp  window.cpp
